removing my sad attempt of adding android support

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,13 +19,14 @@ jobs:
       # - name: macOS
       #   os: macos-latest
 
-        - name: Android32
-          os: ubuntu-latest
-          target: Android32
+      #   no android support yet
+      # - name: Android32
+      #   os: ubuntu-latest
+      #   target: Android32
 
-        - name: Android64
-          os: ubuntu-latest
-          target: Android64
+      # - name: Android64
+      #   os: ubuntu-latest
+      #   target: Android64
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
