--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(randdeathsounds VERSION 1.0.0)
 
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
+    src/folder_manager.cpp
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
