--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
         - name: Windows
           os: windows-latest
 
-      #   shitty bindings
+      #   no bindings lmaoooo
       # - name: macOS
       #   os: macos-latest
 
@@ -24,8 +24,8 @@ jobs:
       #   target: Android32
 
         - name: Android64
-            os: ubuntu-latest
-            target: Android64
+          os: ubuntu-latest
+          target: Android64
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
