--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ project(randdeathsounds VERSION 1.0.0)
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
     src/folder_manager.cpp
+    src/patcher.cpp
+    src/randomizer.cpp
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
